# kiro.rs

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  build.rs  config.example.json  credentials.example.multiple.json
.github/workflows/: docker-test-image.yml
admin-ui/: package.json  pnpm-lock.yaml
admin-ui/src/: App.tsx  index.css
admin-ui/src/api/: credentials.ts
admin-ui/src/components/: add-credential-dialog.tsx  balance-bar.tsx  balance-dialog.tsx  batch-import-dialog.tsx  batch-verify-dialog.tsx  card-actions-menu.tsx  credential-card.tsx  credential-edit-dialog.tsx  credential-edit-popover.tsx  dashboard.tsx  global-config-dialog.tsx  import-token-json-dialog.tsx  kam-import-dialog.tsx  login-page.tsx  proxy-config-dialog.tsx
admin-ui/src/hooks/: use-credentials.ts
admin-ui/src/lib/: format.ts
admin-ui/src/types/: api.ts
src/: image.rs  lib.rs  main.rs  pdf.rs  token.rs
src/admin/: handlers.rs  router.rs  service.rs  types.rs
src/anthropic/: cache_tracker.rs  compressor.rs  converter.rs  handlers.rs  middleware.rs  mod.rs  model_mapper.rs  rewriter.rs  router.rs  stream.rs  structured_output.rs  tool_compression.rs  types.rs  usage.rs  websearch.rs
src/kiro/: affinity.rs  background_refresh.rs  cooldown.rs  fingerprint.rs  machine_id.rs  provider.rs  rate_limiter.rs  token_manager.rs
src/kiro/endpoint/: cli.rs  ide.rs  mod.rs
src/kiro/model/: credentials.rs  token_refresh.rs  usage_limits.rs
src/kiro/model/events/: base.rs  reasoning.rs
src/kiro/model/requests/: conversation.rs  kiro.rs
src/model/: arg.rs  config.rs
tests/: common_smoke.rs  tool_choice_warning.rs
tests/common/: mod.rs
